@@ -5,14 +5,20 @@
 [DllImport("gdldock")]
 static extern IntPtr gdl_dock_layout_get_layouts(IntPtr raw, bool include_default);
 
-public string[] GetLayouts(bool include_default) {
-	IntPtr list_ptr = gdl_dock_layout_get_layouts(Handle, include_default);
-	GLib.List list = new GLib.List (list_ptr, typeof (string));
+[DllImport("libglib-2.0-0.dll")]
+static extern void g_free (IntPtr mem);
 
-	// FIXME: list elements are leaked
+
+public string[] GetLayouts (bool include_default) {
+	IntPtr list_ptr = gdl_dock_layout_get_layouts (Handle, include_default);
+	GLib.List list = new GLib.List (list_ptr, typeof (int));
+
 	string[] result = new string [list.Count];
-	for (int i = 0; i < list.Count; i++)
-		result [i] = list [i] as string;
+	int i = 0;
+	foreach (int ptr in list) {
+		result [i++] = Marshal.PtrToStringAnsi ((IntPtr) ptr);
+		g_free ((IntPtr) ptr);
+	}
 	
 	return result;
 }
